Add Elasticsearch / Fluentd metrics monitoring
This commit does two things:
1) Adds the metrics port for fluentd so we can set up a Prometheus Pod Monitor to scrape metrics from fluentd
2) Adds the elasticsearch-metrics deployment / service to pull metrics from Elasticsearch and present them to Prometheus for scraping

--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -82,3 +82,6 @@ components:
   cloud-controllers:
     image: tigera/cloud-controllers
     version: master
+  elasticsearch-metrics:
+    image: tigera/elasticsearch-metrics
+    version: master
