Add Typha prometheus config

--- a/config/crd/bases/operator.tigera.io_installations.yaml
+++ b/config/crd/bases/operator.tigera.io_installations.yaml
@@ -383,6 +383,11 @@ spec:
                   \n This option allows configuring the `<registry>` portion of the
                   above format."
                 type: string
+              typhaMetricsPort:
+                description: TyphaMetricsPort specifies which port calico/typha serves
+                  prometheus metrics on. By default, metrics are not enabled.
+                format: int32
+                type: integer
               variant:
                 description: 'Variant is the product to install - one of Calico or
                   TigeraSecureEnterprise Default: Calico'
