Changes to run API server for Calico

--- a/config/calico_versions.yml
+++ b/config/calico_versions.yml
@@ -10,3 +10,6 @@ components:
     version: master
   flexvol:
     version: master
+  apiserver:
+    version: latest
+    image: caseydavenport/apiserver
