--- a/config/crd/bases/operator.tigera.io_authentications.yaml
+++ b/config/crd/bases/operator.tigera.io_authentications.yaml
@@ -151,6 +151,16 @@ spec:
                   issuerURL:
                     description: IssuerURL is the URL to the OIDC provider.
                     type: string
+                  promptTypes:
+                    description: 'PromptTypes is an optional list of string values
+                      that specifies whether the Authorization Server prompts the
+                      End-User for reauthentication and consent. The defined values
+                      are: ["None", "Login", "Consent", "SelectAccount"].'
+                    items:
+                      description: 'See the RFC for more information on prompt types:
+                        https://openid.net/specs/openid-connect-core-1_0.html'
+                      type: string
+                    type: array
                   requestedScopes:
                     description: 'RequestedScopes is a list of scopes to request from
                       the OIDC provider. If not provided, the following scopes are
