--- a/config/crd/bases/operator.tigera.io_authentications.yaml
+++ b/config/crd/bases/operator.tigera.io_authentications.yaml
@@ -153,11 +153,14 @@ spec:
                     type: string
                   promptTypes:
                     description: 'PromptTypes is an optional list of string values
-                      that specifies whether the authorization server prompts the
-                      end user for re-authentication and consent. The defined values
-                      are: ["None", "Login", "Consent", "SelectAccount"].'
+                      that specifies whether the identity provider prompts the end
+                      user for re-authentication and consent. See the RFC for more
+                      information on prompt types: https://openid.net/specs/openid-connect-core-1_0.html.
+                      The defined values are: ["None", "Login", "Consent", "SelectAccount"].'
                     items:
-                      description: 'See the RFC for more information on prompt types:
+                      description: 'PromptType is a value that specifies whether the
+                        identity provider prompts the end user for re-authentication
+                        and consent. See the RFC for more information on prompt types:
                         https://openid.net/specs/openid-connect-core-1_0.html'
                       type: string
                     type: array
