--- a/config/crd/bases/operator.tigera.io_authentications.yaml
+++ b/config/crd/bases/operator.tigera.io_authentications.yaml
@@ -161,7 +161,13 @@ spec:
                       description: 'PromptType is a value that specifies whether the
                         identity provider prompts the end user for re-authentication
                         and consent. See the RFC for more information on prompt types:
-                        https://openid.net/specs/openid-connect-core-1_0.html'
+                        https://openid.net/specs/openid-connect-core-1_0.html The
+                        defined values are: ["None", "Login", "Consent", "SelectAccount"].'
+                      enum:
+                      - None
+                      - Login
+                      - Consent
+                      - SelectAccount
                       type: string
                     type: array
                   requestedScopes:
