--- a/config/crd/bases/operator.tigera.io_authentications.yaml
+++ b/config/crd/bases/operator.tigera.io_authentications.yaml
@@ -156,13 +156,12 @@ spec:
                       that specifies whether the identity provider prompts the end
                       user for re-authentication and consent. See the RFC for more
                       information on prompt types: https://openid.net/specs/openid-connect-core-1_0.html.
-                      The defined values are: ["None", "Login", "Consent", "SelectAccount"].'
+                      Default: "Consent".'
                     items:
                       description: 'PromptType is a value that specifies whether the
                         identity provider prompts the end user for re-authentication
                         and consent. See the RFC for more information on prompt types:
-                        https://openid.net/specs/openid-connect-core-1_0.html The
-                        defined values are: ["None", "Login", "Consent", "SelectAccount"].'
+                        https://openid.net/specs/openid-connect-core-1_0.html'
                       enum:
                       - None
                       - Login
