--- a/config/common_versions.yml
+++ b/config/common_versions.yml
@@ -1,5 +1,5 @@
-title: master
+title: v1.0.0
 components:
   key-cert-provisioner:
     image: tigera/key-cert-provisioner
-    version: master
+    version: v1.0.0
