--- a/config/calico_versions.yml
+++ b/config/calico_versions.yml
@@ -1,12 +1,12 @@
-title: v3.18.1
+title: master
 components:
   typha:
-    version: v3.18.1
+    version: master
   calico/node:
-    version: v3.18.1
+    version: master
   calico/cni:
-    version: v3.18.1
+    version: master
   calico/kube-controllers:
-    version: v3.18.1
+    version: master
   flexvol:
-    version: v3.18.1
+    version: master
