--- a/config/common_versions.yml
+++ b/config/common_versions.yml
@@ -1,5 +1,5 @@
-title: v1.0.0
+title: master
 components:
   key-cert-provisioner:
     image: tigera/key-cert-provisioner
-    version: v1.0.0
+    version: master
