--- a/config/calico_versions.yml
+++ b/config/calico_versions.yml
@@ -1,12 +1,12 @@
-title: v3.18.1
+title: release-v3.19
 components:
   typha:
-    version: v3.18.1
+    version: release-v3.19
   calico/node:
-    version: v3.18.1
+    version: release-v3.19
   calico/cni:
-    version: v3.18.1
+    version: release-v3.19
   calico/kube-controllers:
-    version: v3.18.1
+    version: release-v3.19
   flexvol:
-    version: v3.18.1
+    version: release-v3.19
