Get manager up and running with OIDC type = Tigera

--- a/config/crd/bases/operator.tigera.io_authentications.yaml
+++ b/config/crd/bases/operator.tigera.io_authentications.yaml
@@ -151,6 +151,12 @@ spec:
                   issuerURL:
                     description: IssuerURL is the URL to the OIDC provider.
                     type: string
+                  oidcType:
+                    description: 'Default: "Dex"'
+                    enum:
+                    - Dex
+                    - Tigera
+                    type: string
                   promptTypes:
                     description: 'PromptTypes is an optional list of string values
                       that specifies whether the identity provider prompts the end
