--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -1,43 +1,43 @@
-title: master
+title: v3.7.0
 components:
   cnx-manager:
     image: tigera/cnx-manager
-    version: master
+    version: release-calient-v3.8
   voltron:
     image: tigera/voltron
-    version: master
+    version: release-calient-v3.8
   cnx-apiserver:
     image: tigera/cnx-apiserver
-    version: master
+    version: release-calient-v3.8
   cnx-queryserver:
     image: tigera/cnx-queryserver
-    version: master
+    version: release-calient-v3.8
   cnx-kube-controllers:
     image: tigera/kube-controllers
-    version: master
+    version: release-calient-v3.8
   typha:
     image: tigera/typha
-    version: master
+    version: release-calient-v3.8
   cnx-node:
     image: tigera/cnx-node
-    version: master
+    version: release-calient-v3.8
   fluentd:
     image: tigera/fluentd
-    version: master
+    version: release-calient-v3.8
   fluentd-windows:
     image: tigera/fluentd-windows
-    version: master
+    version: release-calient-v3.8
   es-proxy:
     image: tigera/es-proxy
-    version: master
+    version: release-calient-v3.8
   eck-kibana:
     version: 7.10.1
   dex:
     image: tigera/dex
-    version: master
+    version: release-calient-v3.8
   kibana:
     image: tigera/kibana
-    version: master
+    version: release-calient-v3.8
   elasticsearch-operator:
     registry: docker.elastic.co
     image: eck/eck-operator
@@ -46,42 +46,42 @@ components:
     version: 7.10.1
   elasticsearch:
     image: tigera/elasticsearch
-    version: master
+    version: release-calient-v3.8
   elastic-tsee-installer:
     image: tigera/intrusion-detection-job-installer
-    version: master
+    version: release-calient-v3.8
   es-curator:
     image: tigera/es-curator
-    version: master
+    version: release-calient-v3.8
   intrusion-detection-controller:
     image: tigera/intrusion-detection-controller
-    version: master
+    version: release-calient-v3.8
   compliance-controller:
     image: tigera/compliance-controller
-    version: master
+    version: release-calient-v3.8
   compliance-reporter:
     image: tigera/compliance-reporter
-    version: master
+    version: release-calient-v3.8
   compliance-snapshotter:
     image: tigera/compliance-snapshotter
-    version: master
+    version: release-calient-v3.8
   compliance-server:
     image: tigera/compliance-server
-    version: master
+    version: release-calient-v3.8
   compliance-benchmarker:
     image: tigera/compliance-benchmarker
-    version: master
+    version: release-calient-v3.8
   # Below components are all maintained by 3rd parties and thus specify a 'registry' to indicate
   # to the docs & manifest tooling not to default to the tigera registry.
   guardian:
     image: tigera/guardian
-    version: master
+    version: release-calient-v3.8
   tigera-cni:
     image: tigera/cni
-    version: master
+    version: release-calient-v3.8
   cloud-controllers:
     image: tigera/cloud-controllers
-    version: master
+    version: release-calient-v3.8
   elasticsearch-metrics:
     image: tigera/elasticsearch-metrics
-    version: master
+    version: release-calient-v3.8
