Add 3.6 versioning so jpmc can test

--- a/config/common_versions.yml
+++ b/config/common_versions.yml
@@ -2,4 +2,4 @@ title: master
 components:
   key-cert-provisioner:
     image: tigera/key-cert-provisioner
-    version: master
+    version: v1.0.0
