--- a/config/crd/bases/operator.tigera.io_installations.yaml
+++ b/config/crd/bases/operator.tigera.io_installations.yaml
@@ -490,20 +490,13 @@ spec:
                 properties:
                   nodeAffinity:
                     description: NodeAffinity describes node affinity scheduling rules
-                      for typha. NodeAffinity *PreferredNodeAffinity `json:"nodeAffinity,omitempty"`
+                      for typha.
                     properties:
                       preferredDuringSchedulingIgnoredDuringExecution:
                         description: The scheduler will prefer to schedule pods to
                           nodes that satisfy the affinity expressions specified by
                           this field, but it may choose a node that violates one or
-                          more of the expressions. The node that is most preferred
-                          is the one with the greatest sum of weights, i.e. for each
-                          node that meets all of the scheduling requirements (resource
-                          request, requiredDuringScheduling affinity expressions,
-                          etc.), compute a sum by iterating through the elements of
-                          this field and adding "weight" to the sum if the node matches
-                          the corresponding matchExpressions; the node(s) with the
-                          highest sum are the most preferred.
+                          more of the expressions.
                         items:
                           description: An empty preferred scheduling term matches
                             all objects with implicit weight 0 (i.e. it's a no-op).
@@ -598,12 +591,19 @@ spec:
                           type: object
                         type: array
                       requiredDuringSchedulingIgnoredDuringExecution:
-                        description: If the affinity requirements specified by this
-                          field are not met at scheduling time, the pod will not be
-                          scheduled onto the node. If the affinity requirements specified
+                        description: 'WARNING: Please note that If the affinity requirements
+                          specified by this field are not met at scheduling time,
+                          the pod will NOT be scheduled onto the node. There is no
+                          fallback to another affinity rules with this setting. This
+                          may cause networking disruption or even catastrophic failure!
+                          PreferredDuringSchedulingIgnoredDuringExecution should be
+                          a default choice if there are no well understood specific
+                          conditions exist in your environment. NOTE: RequiredDuringSchedulingIgnoredDuringExecution
+                          is also a default for AKS nodes, this way they are not scheduled
+                          on virtual nodes. If the affinity requirements specified
                           by this field cease to be met at some point during pod execution
                           (e.g. due to an update), the system may or may not try to
-                          eventually evict the pod from its node.
+                          eventually evict the pod from its node.'
                         properties:
                           nodeSelectorTerms:
                             description: Required. A list of node selector terms.
@@ -1175,20 +1175,13 @@ spec:
                     properties:
                       nodeAffinity:
                         description: NodeAffinity describes node affinity scheduling
-                          rules for typha. NodeAffinity *PreferredNodeAffinity `json:"nodeAffinity,omitempty"`
+                          rules for typha.
                         properties:
                           preferredDuringSchedulingIgnoredDuringExecution:
                             description: The scheduler will prefer to schedule pods
                               to nodes that satisfy the affinity expressions specified
                               by this field, but it may choose a node that violates
-                              one or more of the expressions. The node that is most
-                              preferred is the one with the greatest sum of weights,
-                              i.e. for each node that meets all of the scheduling
-                              requirements (resource request, requiredDuringScheduling
-                              affinity expressions, etc.), compute a sum by iterating
-                              through the elements of this field and adding "weight"
-                              to the sum if the node matches the corresponding matchExpressions;
-                              the node(s) with the highest sum are the most preferred.
+                              one or more of the expressions.
                             items:
                               description: An empty preferred scheduling term matches
                                 all objects with implicit weight 0 (i.e. it's a no-op).
@@ -1287,13 +1280,20 @@ spec:
                               type: object
                             type: array
                           requiredDuringSchedulingIgnoredDuringExecution:
-                            description: If the affinity requirements specified by
-                              this field are not met at scheduling time, the pod will
-                              not be scheduled onto the node. If the affinity requirements
-                              specified by this field cease to be met at some point
-                              during pod execution (e.g. due to an update), the system
-                              may or may not try to eventually evict the pod from
-                              its node.
+                            description: 'WARNING: Please note that If the affinity
+                              requirements specified by this field are not met at
+                              scheduling time, the pod will NOT be scheduled onto
+                              the node. There is no fallback to another affinity rules
+                              with this setting. This may cause networking disruption
+                              or even catastrophic failure! PreferredDuringSchedulingIgnoredDuringExecution
+                              should be a default choice if there are no well understood
+                              specific conditions exist in your environment. NOTE:
+                              RequiredDuringSchedulingIgnoredDuringExecution is also
+                              a default for AKS nodes, this way they are not scheduled
+                              on virtual nodes. If the affinity requirements specified
+                              by this field cease to be met at some point during pod
+                              execution (e.g. due to an update), the system may or
+                              may not try to eventually evict the pod from its node.'
                             properties:
                               nodeSelectorTerms:
                                 description: Required. A list of node selector terms.
