Allow Implicit OIDC flow for Manager and Elasticsearch

--- a/config/crd/bases/operator.tigera.io_authentications.yaml
+++ b/config/crd/bases/operator.tigera.io_authentications.yaml
@@ -175,6 +175,12 @@ spec:
                     items:
                       type: string
                     type: array
+                  type:
+                    description: 'Default: "Dex"'
+                    enum:
+                    - Dex
+                    - Tigera
+                    type: string
                   usernameClaim:
                     description: UsernameClaim specifies which claim to use from the
                       OIDC provider as the username.
