Make AKS RequiredDuringSchedulingIgnoredDuringExecution a default value

--- a/config/crd/bases/operator.tigera.io_installations.yaml
+++ b/config/crd/bases/operator.tigera.io_installations.yaml
@@ -599,8 +599,8 @@ spec:
                           PreferredDuringSchedulingIgnoredDuringExecution should be
                           a default choice if there are no well understood specific
                           conditions exist in your environment. NOTE: RequiredDuringSchedulingIgnoredDuringExecution
-                          is also a default for AKS nodes, this way they are not scheduled
-                          on virtual nodes. If the affinity requirements specified
+                          is set by default for AKS nodes, to avoid scheduling Typhas
+                          on virtual-nodes. If the affinity requirements specified
                           by this field cease to be met at some point during pod execution
                           (e.g. due to an update), the system may or may not try to
                           eventually evict the pod from its node.'
@@ -1288,9 +1288,9 @@ spec:
                               or even catastrophic failure! PreferredDuringSchedulingIgnoredDuringExecution
                               should be a default choice if there are no well understood
                               specific conditions exist in your environment. NOTE:
-                              RequiredDuringSchedulingIgnoredDuringExecution is also
-                              a default for AKS nodes, this way they are not scheduled
-                              on virtual nodes. If the affinity requirements specified
+                              RequiredDuringSchedulingIgnoredDuringExecution is set
+                              by default for AKS nodes, to avoid scheduling Typhas
+                              on virtual-nodes. If the affinity requirements specified
                               by this field cease to be met at some point during pod
                               execution (e.g. due to an update), the system may or
                               may not try to eventually evict the pod from its node.'
