--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -85,3 +85,11 @@ components:
   elasticsearch-metrics:
     image: tigera/elasticsearch-metrics
     version: master
+  prometheus:
+    registry: quay.io
+    image: prometheus/prometheus
+    version: v2.17.2
+  prometheus-alertmanager:
+    registry: quay.io
+    image: prometheus/alertmanager
+    version: v0.20.0
