Operator managed Prometheus custom resource
This changeset brings installation of Prometheus related custom
resources under the control of Tigera operator.

* Add a new MonitorSpec with no user configurable fields for this PR.
* Add Monitor controller.
* Add Monitor render.

After this change, Prometheus related CRs will be removed from
`custom-resource.yaml`. It will be replaced with a new Monitor CR.

--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -85,3 +85,9 @@ components:
   elasticsearch-metrics:
     image: tigera/elasticsearch-metrics
     version: master
+  prometheus:
+    image: prometheus/prometheus
+    version: v2.17.2
+  prometheus-alertmanager:
+    image: prometheus/alertmanager
+    version: v0.20.0
